[package]
name = "cabal_proto"
version = "0.1.0"
edition = "2021"

[dependencies]
prost = "0.13.4"
tonic = { version = "0.12.3", default-features = false, features = [
    "prost",
    "codegen",
] }
[build-dependencies]
tonic-build = { version = "0.12", default-features = false, features = [
    "prost",
] }

[features]
default = ["client"]
client =[]
server =[]