[package]
name = "cabal_proto"
version = "0.1.0"
authors.workspace = true
homepage.workspace = true
keywords.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
prost.workspace = true

tonic = { workspace = true, default-features = false, features = [
    "prost",
    "codegen",
] }
[build-dependencies]
tonic-build  = {workspace = true, default-features = false, features = [
    "prost",
] }

[features]
default = ["client"]
client =[]
server =[]
